# dictionary_template

./: CMakeLists.txt  Main.cpp  README.md
src/: AbstractDictionary.hpp  CMakeLists.txt  CapitalLetter.cpp  CapitalLetter.hpp  Dictionary.cpp  Dictionary.hpp  ListCircBidir.cpp  ListCircBidir.hpp  NodeBidir.hpp  Tree.hpp  Trie.cpp  Trie.hpp
